infrastructure/kubernetes/base/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefulset
  labels:
    component: db
spec:
  serviceName: db-service
  replicas: 1
  selector:
    matchLabels:
      component: db
  template:
    metadata:
      labels:
        component: db
    spec:
      automountServiceAccountToken: false
      containers:
        - name: mongo-container
          image: mongo:8.0.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            limits:
              memory: 1024Mi
              cpu: 500m
              ephemeral-storage: 5Gi
            requests:
              memory: 512Mi
              cpu: 250m
              ephemeral-storage: 2Gi  
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: cinder-csi
        resources:
          requests:
            storage: 10Gi

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    component: db
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    component: db
