infrastructure/kubernetes/base/backup_access.yaml
apiVersion: v1
kind: Service
metadata:
  name: backup-access-service
spec:
  selector:
    component: backup-access
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backup-access-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backup-access
  template:
    metadata:
      labels:
        component: backup-access
    spec:
      automountServiceAccountToken: false
      containers:
        - name: backup-access-container
          image: svenstaro/miniserve:0.31.0
          volumeMounts:
            - name: backup-storage
              mountPath: /files
          ports:
            - containerPort: 8080    
          command: ["/app/miniserve"]  
          args: ["/files", "--auth", "$(MINISERVE_USERNAME):$(MINISERVE_PASSWORD)"]
          resources: 
            limits:
              memory: 1024Mi
              cpu: 500m
              ephemeral-storage: 5Gi
            requests:
              memory: 512Mi
              cpu: 250m
              ephemeral-storage: 2Gi  
      volumes:
        - name: backup-storage
          persistentVolumeClaim:
            claimName: backup-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backup-access-ingress
  labels:
    component: backup-access
spec:
  rules:
    - host: backups-rateit-base.pm4.init-lab.ch 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backup-access-service
                port:
                  number: 80
