infrastructure/kubernetes/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  strategy: {}
  template:
    metadata:
      labels:
        component: frontend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: frontend-pod
          image: ghcr.io/rateit-pm4-org/rateit-frontend:stage
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 1024Mi
              cpu: 500m
            requests:
              memory: 512Mi
              cpu: 250m
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    component: frontend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    component: frontend
spec:
  rules:
    - host: frontend-rateit-base.pm4.init-lab.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
